# battleshipgameHaskell

./: .gitignore  README.md  battleship.cabal  board.md  run.bat
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Board.hs  Game.hs  Main.hs  Player.hs  Ship.hs  Utils.hs
