cabal-version: 2.4
name: battleship
version: 0.1.0.0
synopsis: A Battleship game implementation in Haskell
description: A command-line Battleship game with support for single player vs computer
author: Kevin Ocansey
maintainer: kevinocansey11@gmail.com
category: Game
build-type: Simple

executable battleship
    main-is: Main.hs
    other-modules: 
        Board,
        Game,
        Player,
        Ship,
        Utils
    build-depends: 
        base >=4.17 && <5,
        random >=1.2,
        containers >=0.6
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
